--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -7,6 +7,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url("rebel.png");
+  background-repeat: repeat-y repeat-x;
 }
 
 code {
@@ -15,6 +17,11 @@ code {
 }
 
 .bodyContainer {
-  background-color: #000000;
-  background-image: linear-gradient(315deg, #000000 0%, #7f8c8d 74%);
+  background-color: white;
+  border-radius: 25px;
+  height: 600px;
+}
+
+div.bodyContent {
+  text-align: center;
 }
