--- a/client/src/components/Signup/style.css
+++ b/client/src/components/Signup/style.css
@@ -3,7 +3,7 @@
     box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2), 0 7px 20px 0 rgba(0,0,0,0.17);
     margin: 100px auto 0;
     transition: all .8s;
-    width: 100%;
+    width: 450px;
 }
 .modal-wrapper.hide {
     transform: translateY(-100vh);
