--- a/client/src/css/listView.css
+++ b/client/src/css/listView.css
@@ -27,3 +27,13 @@
   .list-group-item, i.icon-left, i.icon-right {
     font-size: 2rem;
   }
+
+  button.open-modal-btn.add-icon {
+    /* position: absolute;
+    left: 1003px; */
+    margin: 0;
+    font-size: 2rem;
+    height: 60px;
+    width: 48px;
+    line-height: 1;
+  }
